more indexes in memory
