# src/app/shared/api/endpoints/models.ts
@@ -1,5 +1,5 @@
+export { SavedIndexStatus } from './models/saved-index-status';
 export { ArticleModel } from './models/article-model';
 export { QueryResultModel } from './models/query-result-model';
-export { IndexStatus } from './models/index-status';
 export { QueryModel } from './models/query-model';
-export { SavedIndexStatus } from './models/saved-index-status';
+export { IndexStatus } from './models/index-status';
