# src/app/shared/api/endpoints/models/index-status.ts
@@ -1,5 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface IndexStatus {
+  indexName?: string;
   initialized?: boolean;
 }
