# src/app/shared/api/endpoints/models/query-model.ts
@@ -1,6 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface QueryModel {
+  indexName?: string;
   numberOfResults?: number;
   query?: string;
   vectorModel?: boolean;
