# src/app/shared/api/endpoints/models/saved-index-status.ts
@@ -1,5 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface SavedIndexStatus {
+  indexName?: string;
   saved?: boolean;
 }
